--- a/productlist.html
+++ b/productlist.html
@@ -94,20 +94,143 @@
                 <div class="hist"><div>Rock</div> </div>
             </div>
 
-            <div class="newitems">
-                <div class="newproduct1">
-                    <img src="images/hiphop.png" alt="">
-                    <div class="productinfo">
-                        <div class="pname">ORIGINAL HIP HOP CLASSICS SERIES</div>
-                        <div class="pcost">$15</div>
+            <div class="productlist_content">
+                <div class="sortby"><img src="images/sort.png" alt=""></div>
+                <div class="productlist_products">
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/amy2.jpg" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">AMY WINEHOUSE FRANK</div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$15</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/car.png" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">GOOD KID: MAAD CITY</div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$35</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/glad.png" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">GLADYS KNIGHT & THE PIPS</div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$15</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/muddy.png" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">MUDDY WATERS HOWLIN WOLF</div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$15</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="newproduct1">
-                    <img src="images/defense.png" alt="">
-                    <div class="productinfo">
-                        <div class="pname">IN MY DEFENSE THAT WAS A LIE</div>
-                        <div class="pcost">$20</div>
+                <div class="row2">
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/defense.png" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">IN MY DEFENSE</div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$15</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/hiphop.png" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">ORIGINAL HIP HOP </div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$15</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/nas.png" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">NAS: ILLMATIC</div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$15</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pro1">
+                        <div class="pro1_img">
+                            <img src="images/meris.png" alt="">
+                        </div>
+                        <div class="pro1_info">
+                            <div class="pro1_text">
+                                <div class="pro1_name">YOU ARE NOT ALONE</div>
+                                <div class="info_btm">
+                                    <div class="pro1_price">$15</div>
+                                    <div class="addbtn">
+                                        <button>Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
