--- a/Productpage.html
+++ b/Productpage.html
@@ -57,12 +57,12 @@
                 <a href="cart.html">Cart</a>
             </div>
             <div class="sidecartlist">
-                <div class="item1">
+                <div id="cart_i2" class="item1">
                     <div class="item1name">
                         AMY WINEHOUSE FRANK
                     </div>
                     <span class="quantityctrl">
-                        <span class="-"><img src="images/minus.png" alt=""></span>
+                        <span class="-"><img onclick=" minus()" src="images/minus.png" alt=""></span>
                         <span class="quantity">x1</span>
                         <span class="+"><img src="images/plus.png" alt=""></span>
                         <span class="price">$15</span>
@@ -111,7 +111,7 @@
                     <div class="ppage_cost">$15</div>
                     <div class="ppage_buttons">
                         <button class="ppbtns">Add to Favourite</button>
-                        <button class="ppbtns">Add to Cart</button>
+                        <button onclick="addCart()" class="ppbtns">Add to Cart</button>
                     </div>
                 </div>
             </div>
