--- a/cart.html
+++ b/cart.html
@@ -58,7 +58,7 @@
                     </td>
                 </tr>
 
-                <tr>
+                <tr id="glad">
                     <td class="cart_product">
                         <img src="images/glad.png" alt="">
                         <div class="product_info">
@@ -78,7 +78,7 @@
 
                     <td class="product_cancel">
                         <button class="cancel">
-                            <img src="images/cancel.png" alt="">
+                            <img onclick="cancel()" src="images/cancel.png" alt="">
                         </button>
                     </td>
                 </tr>
