--- a/productlist.html
+++ b/productlist.html
@@ -56,12 +56,12 @@
                 <a href="cart.html">Cart</a>
             </div>
             <div class="sidecartlist">
-                <div class="item1">
+                <div id="cart_i2" class="item1">
                     <div class="item1name">
                         AMY WINEHOUSE FRANK
                     </div>
                     <span class="quantityctrl">
-                        <span class="-"><img src="images/minus.png" alt=""></span>
+                        <span class="-"><img onclick=" minus()" src="images/minus.png" alt=""></span>
                         <span class="quantity">x1</span>
                         <span class="+"><img src="images/plus.png" alt=""></span>
                         <span class="price">$15</span>
@@ -76,7 +76,7 @@
                     </div>
 
                     <span class="quantityctrl">
-                        <span class="-"><img src="images/minus.png" alt=""></span>
+                        <span class="-"><img  src="images/minus.png" alt=""></span>
                         <span class="quantity">x1</span>
                         <span class="+"><img src="images/plus.png" alt=""></span>
                         <span class="price">$25</span>
@@ -107,7 +107,7 @@
                                 <div class="info_btm">
                                     <div class="pro1_price">$15</div>
                                     <div class="addbtn">
-                                        <button>Add to Cart</button>
+                                        <button onclick="addCart()">Add to Cart</button>
                                     </div>
                                 </div>
                             </div>
