--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 <a href="cart.html">Cart</a>
             </div>
             <div class="sidecartlist">
-                <div class="item1">
+                <div id="cart_i2" class="item1">
                     <div class="item1name">
                         AMY WINEHOUSE FRANK
                     </div>
                     <span class="quantityctrl">
-                        <span class="-"><img src="images/minus.png" alt=""></span>
+                        <span class="-"><img onclick=" minus()" src="images/minus.png" alt=""></span>
                         <span class="quantity">x1</span>
                         <span class="+"><img src="images/plus.png" alt=""></span>
                         <span class="price">$15</span>
@@ -71,12 +71,12 @@
 
                 <div class="item1">
 
-                    <div class="item1name">
+                    <div  class="item1name">
                         MUDDY WATERS HOWLIN WOLF BUDDY GUY
                     </div>
 
                     <span class="quantityctrl">
-                        <span class="-"><img src="images/minus.png" alt=""></span>
+                        <span class="-"><img  src="images/minus.png" alt=""></span>
                         <span class="quantity">x1</span>
                         <span class="+"><img src="images/plus.png" alt=""></span>
                         <span class="price">$25</span>
